# Scalp4

./: .coverage  .gitignore  DIARY.md  Dockerfile  MASTER_PLAN.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.agent/workflows/: PROJECT_SKILLS.md
agents/: __init__.py  action_gating.py  ensemble.py  sac_policy.py
configs/: __init__.py  symbols.yaml  trading_rules.yaml  train_config.yaml  validator.py
data_engine/: __init__.py  feature_builder.py  mt5_fetcher.py  multi_tf_builder.py  normalizer.py
environments/: __init__.py  market_sim.py  reward_engine.py  scalp_env.py
live/: __init__.py  killswitch.py  main_loop.py  mt5_bridge.py  risk_manager.py  smc_levels.py  watchdog.py
models/: __init__.py  cross_attention_mtf.py  regime_detector.py  transformer_encoder.py
reports/: feature_importance.txt  oos_tearsheet.txt
scripts/: backtest.py  episode_demo.py  setup_runpod.sh  shap_analysis.py  test_live_execution.py  train.py  train_baseline.py  train_runpod.py
tests/: __init__.py  test_config.py  test_cross_attention.py  test_ensemble.py  test_env.py  test_features.py  test_live_infra.py  test_market_sim.py  test_normalizer.py  test_regime_detector.py  test_reward.py  test_risk_manager.py  test_sac_policy.py  test_transformer.py
training/: __init__.py  curriculum.py  per_buffer.py  risk_metrics.py  trainer.py  vec_env_factory.py
utils/: __init__.py  logger.py  telegram_bot.py
